--- a/Projetos/Javascript/Contador/assets/CSS/styles.css
+++ b/Projetos/Javascript/Contador/assets/CSS/styles.css
@@ -7,19 +7,19 @@
 body {
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     flex-direction: column;
     background-color: rgb(177, 225, 255);
 }
 
 button {
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
+    height: 55px;
+    width: 55px;
+    border-radius: 20%;
     border: 2px solid lightcoral;
     background-color: rgb(241, 214, 214);
     color: lightcoral;
-    font-size: 16pt;
+    font-size: 25pt;
     font-weight: 600;
     text-align: center;
 }
@@ -31,6 +31,7 @@ button {
 #currentNumber {
     display: flex;
     align-items: center;
-    margin: 0 20px;
-    font-size: 16pt;
+    margin: 0 30px;
+    font-size: 30pt;
+    font-weight: bold;
 }
