--- a/Aulas/Angular/liveAngular/src/app/app.component.html
+++ b/Aulas/Angular/liveAngular/src/app/app.component.html
@@ -1,5 +1,7 @@
-<h1 class="text-success text-center">live Angular</h1>
+<!-- <h1 class="text-success text-center">live Angular</h1> -->
 
+<!-- Usando Diretiva personalizada -->
+<h1 appMarcaTexto corDeFundo="magenta" corDoTexto="gray" class="text-center">live Angular</h1>
 <!-- Diretivas de Atributo -->
 <div 
     [ngStyle]="{background: count < 5 ? 'red' : 'blue'}"
@@ -39,16 +41,20 @@
 <!-- <ul class="list-group mx-auto my-3 col-3">
     <ng-template ngFor let-pessoa [ngForOf]="pessoas">
         <li class="list-group-item">
-            O nome da pessoa é {{ pessoa.nome }} {{ pessoa.sobrenome }}.
+            O nome da pessoa é {{ pessoa.firstName }} {{ pessoa.lastName }} e sua idade é {{ pessoa.age }} anos.
         </li>
     </ng-template>
 </ul> -->
+
+<!-- ngfor acima foi transferido para o component abaixo usando o mesmo serviço -->
+
+<app-list-people></app-list-people>
 
 <!-- ngFor - Forma Simplificada -->
 
 <ul class="list-group mx-auto my-3 col-3">
     <li class="list-group-item" *ngFor="let pessoa of pessoas">
-        O nome da pessoa é {{ pessoa.nome }} {{ pessoa.sobrenome }}.
+        O nome da pessoa é {{ pessoa.firstName }} {{ pessoa.lastName }} e sua idade é {{ pessoa.age }} anos.
     </li>
 </ul>
 
@@ -56,7 +62,8 @@
 <!-- Transferindo dados do TypeScript  e vice-versa -->
 
 <div class="col-4 mx-auto my-3">
-    <h3>{{ nome }}</h3>   
+    <!-- Usando diretiva customizada -->
+    <h3 appMarcaTexto corDeFundo="gray" corDoTexto="red">{{ nome }}</h3>   
     <button class="btn btn-success col-4 mx-auto" (click)="clicou('Adilson')">Clique</button>
 </div>
 
