Angular - Consumindo APIs

--- a/Aulas/Angular/liveAngular/src/app/app.component.html
+++ b/Aulas/Angular/liveAngular/src/app/app.component.html
@@ -78,4 +78,16 @@
         [(ngModel)]="text"  
     >
     <h4>Saida: {{ text }} </h4>
-</div>    
+</div>
+
+<div class="container my-5">
+    <!-- <div class="row d-flex align-items-center justify-content-center"> -->
+    <div class="row d-flex text-center justify-content-center">
+        <h2>Listagem de Personagens Rick and Morty</h2>
+
+        <div class="col-12">
+            <app-list-api></app-list-api>
+        </div>
+    </div>
+</div>
+
